--- a/Kolony/Base.lproj/Main.storyboard
+++ b/Kolony/Base.lproj/Main.storyboard
@@ -794,12 +794,12 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6fk-iY-Qfy">
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="liD-kX-EHM">
                                     <size key="itemSize" width="377" height="181"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                                    <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <label key="backgroundView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please login in order to add items to your cart." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="200" id="rbr-Pj-JON">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="769"/>
@@ -817,37 +817,27 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nikeAir" translatesAutoresizingMaskIntoConstraints="NO" id="XUL-Ql-OsF">
-                                                    <rect key="frame" x="0.0" y="61" width="162" height="120"/>
+                                                    <rect key="frame" x="8" y="36" width="197" height="145"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="162" id="MNE-tG-cb5"/>
-                                                        <constraint firstAttribute="height" constant="120" id="R3b-rh-6V8"/>
+                                                        <constraint firstAttribute="width" constant="197" id="MNE-tG-cb5"/>
+                                                        <constraint firstAttribute="height" constant="145" id="R3b-rh-6V8"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6k-cw-SRo">
-                                                    <rect key="frame" x="0.0" y="0.0" width="377" height="53"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6k-cw-SRo">
+                                                    <rect key="frame" x="8" y="0.0" width="361" height="42"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="377" id="3Mi-7K-Bzl"/>
-                                                        <constraint firstAttribute="height" constant="53" id="3ZK-6a-nfw"/>
+                                                        <constraint firstAttribute="width" constant="361" id="3Mi-7K-Bzl"/>
+                                                        <constraint firstAttribute="height" constant="42" id="3ZK-6a-nfw"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V6D-ij-MuO">
-                                                    <rect key="frame" x="170" y="61" width="207" height="26"/>
+                                                    <rect key="frame" x="170" y="50" width="207" height="26"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="207" id="Kcr-Un-2Ih"/>
                                                         <constraint firstAttribute="height" constant="26" id="bq9-sB-WVs"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2pT-Y3-wTO">
-                                                    <rect key="frame" x="170" y="95" width="207" height="34"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="207" id="0Kk-Gq-yGq"/>
-                                                        <constraint firstAttribute="height" constant="34" id="1Rs-Bn-YIt"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
                                                     <nil key="textColor"/>
@@ -872,6 +862,16 @@
                                                         </attributedString>
                                                     </state>
                                                 </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2pT-Y3-wTO">
+                                                    <rect key="frame" x="170" y="91" width="207" height="34"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="207" id="0Kk-Gq-yGq"/>
+                                                        <constraint firstAttribute="height" constant="34" id="1Rs-Bn-YIt"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="V6D-ij-MuO" secondAttribute="trailing" id="40O-zM-kgB"/>
@@ -879,19 +879,20 @@
                                                 <constraint firstItem="V6D-ij-MuO" firstAttribute="top" secondItem="U6k-cw-SRo" secondAttribute="bottom" constant="8" id="GEO-Gq-eti"/>
                                                 <constraint firstItem="U6k-cw-SRo" firstAttribute="top" secondItem="59q-G1-9sC" secondAttribute="top" id="HJu-TP-GDA"/>
                                                 <constraint firstAttribute="bottom" secondItem="XUL-Ql-OsF" secondAttribute="bottom" id="LKY-37-GX6"/>
-                                                <constraint firstItem="XUL-Ql-OsF" firstAttribute="leading" secondItem="59q-G1-9sC" secondAttribute="leading" id="MYt-lg-oLD"/>
-                                                <constraint firstItem="aLN-sI-d9Y" firstAttribute="top" secondItem="2pT-Y3-wTO" secondAttribute="bottom" constant="8" id="Tji-d0-lPL"/>
-                                                <constraint firstItem="aLN-sI-d9Y" firstAttribute="leading" secondItem="XUL-Ql-OsF" secondAttribute="trailing" constant="43" id="YZC-hp-bY3"/>
-                                                <constraint firstItem="2pT-Y3-wTO" firstAttribute="top" secondItem="V6D-ij-MuO" secondAttribute="bottom" constant="8" id="Yvk-M6-gw6"/>
+                                                <constraint firstItem="XUL-Ql-OsF" firstAttribute="leading" secondItem="59q-G1-9sC" secondAttribute="leading" constant="8" id="MYt-lg-oLD"/>
+                                                <constraint firstItem="aLN-sI-d9Y" firstAttribute="top" secondItem="2pT-Y3-wTO" secondAttribute="bottom" constant="12" id="Tji-d0-lPL"/>
+                                                <constraint firstItem="aLN-sI-d9Y" firstAttribute="leading" secondItem="XUL-Ql-OsF" secondAttribute="trailing" id="YZC-hp-bY3"/>
+                                                <constraint firstItem="2pT-Y3-wTO" firstAttribute="top" secondItem="V6D-ij-MuO" secondAttribute="bottom" constant="15" id="Yvk-M6-gw6"/>
                                                 <constraint firstAttribute="trailing" secondItem="2pT-Y3-wTO" secondAttribute="trailing" id="aMv-Tb-Ycs"/>
                                                 <constraint firstAttribute="trailing" secondItem="aLN-sI-d9Y" secondAttribute="trailing" constant="34" id="csK-pQ-GKW"/>
-                                                <constraint firstItem="2pT-Y3-wTO" firstAttribute="leading" secondItem="XUL-Ql-OsF" secondAttribute="trailing" constant="8" id="kyp-Bc-1pG"/>
-                                                <constraint firstItem="U6k-cw-SRo" firstAttribute="leading" secondItem="59q-G1-9sC" secondAttribute="leading" id="pmt-Br-nm2"/>
-                                                <constraint firstItem="V6D-ij-MuO" firstAttribute="leading" secondItem="XUL-Ql-OsF" secondAttribute="trailing" constant="8" id="tMy-bF-N8k"/>
-                                                <constraint firstAttribute="trailing" secondItem="U6k-cw-SRo" secondAttribute="trailing" id="yhN-dK-gbu"/>
-                                                <constraint firstItem="XUL-Ql-OsF" firstAttribute="top" secondItem="U6k-cw-SRo" secondAttribute="bottom" constant="8" id="zcA-B4-Zde"/>
+                                                <constraint firstItem="2pT-Y3-wTO" firstAttribute="leading" secondItem="XUL-Ql-OsF" secondAttribute="trailing" constant="-35" id="kyp-Bc-1pG"/>
+                                                <constraint firstItem="U6k-cw-SRo" firstAttribute="leading" secondItem="59q-G1-9sC" secondAttribute="leading" constant="8" id="pmt-Br-nm2"/>
+                                                <constraint firstItem="V6D-ij-MuO" firstAttribute="leading" secondItem="XUL-Ql-OsF" secondAttribute="trailing" constant="-35" id="tMy-bF-N8k"/>
+                                                <constraint firstAttribute="trailing" secondItem="U6k-cw-SRo" secondAttribute="trailing" constant="8" id="yhN-dK-gbu"/>
+                                                <constraint firstItem="XUL-Ql-OsF" firstAttribute="top" secondItem="U6k-cw-SRo" secondAttribute="bottom" constant="-6" id="zcA-B4-Zde"/>
                                             </constraints>
                                         </collectionViewCellContentView>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <size key="customSize" width="377" height="181"/>
                                         <connections>
                                             <outlet property="cartImage" destination="XUL-Ql-OsF" id="DJc-zi-5wT"/>
