--- a/Kolony/Base.lproj/Main.storyboard
+++ b/Kolony/Base.lproj/Main.storyboard
@@ -357,11 +357,11 @@
             <objects>
                 <viewController storyboardIdentifier="MainVC" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JXj-Jg-4R7" userLabel="MainVC" customClass="MainVC" customModule="Kolony" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YLH-O9-0Td">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="681"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="gKM-8A-Tyx">
-                                <rect key="frame" x="0.0" y="44" width="416" height="637"/>
+                                <rect key="frame" x="0.0" y="44" width="416" height="852"/>
                                 <color key="backgroundColor" red="0.96439847797927458" green="0.96439847797927458" blue="0.96439847797927458" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rek-Nu-uR0">
                                     <size key="itemSize" width="168" height="210"/>
@@ -381,15 +381,15 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="168" height="210"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t6J-YJ-QJJ">
-                                                            <rect key="frame" x="0.0" y="0.0" width="168" height="146"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="168" height="124"/>
                                                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UFu-Jj-4vT">
-                                                            <rect key="frame" x="0.0" y="146" width="168" height="35"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UFu-Jj-4vT">
+                                                            <rect key="frame" x="8" y="122" width="152" height="59"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="35" id="b3r-Eh-9RK"/>
+                                                                <constraint firstAttribute="height" constant="59" id="b3r-Eh-9RK"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -404,11 +404,11 @@
                                                     <constraints>
                                                         <constraint firstItem="UFu-Jj-4vT" firstAttribute="centerX" secondItem="Xg3-Oe-xe1" secondAttribute="centerX" id="AHx-81-AOj"/>
                                                         <constraint firstItem="UFu-Jj-4vT" firstAttribute="centerX" secondItem="vCD-EV-MdC" secondAttribute="centerX" id="AVB-jC-diz"/>
-                                                        <constraint firstItem="UFu-Jj-4vT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Xg3-Oe-xe1" secondAttribute="leading" id="Dht-O6-8nI"/>
-                                                        <constraint firstItem="UFu-Jj-4vT" firstAttribute="top" secondItem="t6J-YJ-QJJ" secondAttribute="bottom" id="Fqh-YC-8Je"/>
-                                                        <constraint firstItem="UFu-Jj-4vT" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="t6J-YJ-QJJ" secondAttribute="trailing" id="Gr6-s6-ibw"/>
+                                                        <constraint firstItem="UFu-Jj-4vT" firstAttribute="leading" secondItem="Xg3-Oe-xe1" secondAttribute="leading" constant="8" id="Dht-O6-8nI"/>
+                                                        <constraint firstItem="UFu-Jj-4vT" firstAttribute="top" secondItem="t6J-YJ-QJJ" secondAttribute="bottom" constant="-2" id="Fqh-YC-8Je"/>
+                                                        <constraint firstItem="UFu-Jj-4vT" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="t6J-YJ-QJJ" secondAttribute="trailing" constant="-19" id="Gr6-s6-ibw"/>
                                                         <constraint firstItem="vCD-EV-MdC" firstAttribute="top" secondItem="UFu-Jj-4vT" secondAttribute="bottom" constant="4" id="KZl-Ik-wOh"/>
-                                                        <constraint firstItem="UFu-Jj-4vT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="t6J-YJ-QJJ" secondAttribute="leading" id="Q12-4C-xlW"/>
+                                                        <constraint firstItem="UFu-Jj-4vT" firstAttribute="leading" secondItem="t6J-YJ-QJJ" secondAttribute="leading" constant="8" id="Q12-4C-xlW"/>
                                                         <constraint firstItem="t6J-YJ-QJJ" firstAttribute="centerX" secondItem="UFu-Jj-4vT" secondAttribute="centerX" id="hGi-7x-HB3"/>
                                                         <constraint firstItem="t6J-YJ-QJJ" firstAttribute="top" secondItem="Xg3-Oe-xe1" secondAttribute="top" id="n67-fD-RVJ"/>
                                                         <constraint firstAttribute="bottom" secondItem="UFu-Jj-4vT" secondAttribute="bottom" constant="29" id="vD3-NQ-j2U"/>
@@ -551,7 +551,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f09-rT-Svy">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="1167.5"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nikeAir" translatesAutoresizingMaskIntoConstraints="NO" id="jwi-N7-xeA">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jwi-N7-xeA">
                                                 <rect key="frame" x="20" y="0.0" width="374" height="263"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="374" id="Rcd-Jw-Iy5"/>
@@ -845,7 +845,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o3G-w3-dbK" customClass="RoundedButton" customModule="Kolony" customModuleProvider="target">
-                                <rect key="frame" x="20" y="753" width="374" height="40"/>
+                                <rect key="frame" x="20" y="704" width="374" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Z4S-RX-XaV"/>
                                 </constraints>
@@ -858,10 +858,10 @@
                                 </connections>
                             </button>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="vNP-I7-v5a">
-                                <rect key="frame" x="188.5" y="710" width="37" height="37"/>
+                                <rect key="frame" x="188.5" y="661" width="37" height="37"/>
                             </activityIndicatorView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="153" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nYA-PO-ZUO">
-                                <rect key="frame" x="15" y="54" width="384" height="450"/>
+                                <rect key="frame" x="15" y="54" width="384" height="401"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="sectionIndexBackgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                 <prototypes>
@@ -963,7 +963,7 @@
                                 </prototypes>
                             </tableView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="hV4-6A-bC1">
-                                <rect key="frame" x="15" y="505" width="374" height="233"/>
+                                <rect key="frame" x="15" y="456" width="374" height="233"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nJT-I2-wNp">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="1"/>
@@ -1169,7 +1169,7 @@
             <objects>
                 <viewController storyboardIdentifier="AccountVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vho-VM-GWe" customClass="AccountVC" customModule="Kolony" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lAr-xa-yE7">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="5Gu-qN-L9X"/>
@@ -1193,7 +1193,10 @@
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="jtA-V7-R8I"/>
                     </toolbarItems>
-                    <navigationItem key="navigationItem" id="gmo-PR-CeK"/>
+                    <navigationItem key="navigationItem" id="gmo-PR-CeK">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="rfQ-UW-43G"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="saG-3A-rCG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1205,11 +1208,11 @@
             <objects>
                 <viewController storyboardIdentifier="OrdersVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="lEq-Id-LfM" userLabel="OrdersVC" customClass="OrdersVC" customModule="Kolony" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BQC-eY-SZB">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="153" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1H5-qO-zI8">
-                                <rect key="frame" x="15" y="54" width="384" height="832"/>
+                                <rect key="frame" x="15" y="54" width="384" height="749"/>
                                 <color key="backgroundColor" red="0.96471887830000003" green="0.96468263860000003" blue="0.96470719579999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="OrderCell" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="OrderCell" rowHeight="153" id="iGo-4l-0OF" customClass="OrderCell" customModule="Kolony" customModuleProvider="target">
@@ -1320,6 +1323,31 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Cr7-I2-crT"/>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="NQ6-4F-K7f"/>
+                        <barButtonItem title="Item" image="homePic" id="97z-Ap-oyF">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="homeBtnOnClick:" destination="lEq-Id-LfM" id="VbD-df-AJu"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="Mph-Qg-IPq"/>
+                        <barButtonItem title="Item" image="cartPic1" id="Gje-4A-hiN">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="cartBtnOnClick:" destination="lEq-Id-LfM" id="gFr-iE-tWB"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="WH6-7t-j4V"/>
+                        <barButtonItem title="Item" image="personPic" id="m5c-bV-P3n">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="accBtnOnClick:" destination="lEq-Id-LfM" id="8XB-AJ-SYa"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="cjP-Sh-fkc"/>
+                    </toolbarItems>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics" barStyle="black" translucent="NO"/>
                     <connections>
                         <outlet property="tableView" destination="1H5-qO-zI8" id="svL-h0-cRb"/>
                     </connections>
@@ -1363,13 +1391,12 @@
         <image name="deletePic" width="24" height="24"/>
         <image name="homePic" width="36" height="36"/>
         <image name="menuVert" width="36" height="36"/>
-        <image name="nikeAir" width="333.33334350585938" height="222.33332824707031"/>
         <image name="personPic" width="36" height="36"/>
         <image name="round_tune_black_36pt" width="36" height="36"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="MyG-0K-VUg"/>
-        <segue reference="Eca-M0-IVE"/>
-        <segue reference="0hF-rw-AkG"/>
+        <segue reference="fM6-WC-EoV"/>
+        <segue reference="sbP-hK-w5H"/>
+        <segue reference="cF6-Wh-WYM"/>
     </inferredMetricsTieBreakers>
 </document>
