--- a/Kolony/Base.lproj/Main.storyboard
+++ b/Kolony/Base.lproj/Main.storyboard
@@ -459,7 +459,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Eg: 1000.99" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rKw-EO-a8y">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Eg: 99.98" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rKw-EO-a8y">
                                         <rect key="frame" x="57.666666666666686" y="355" width="240" height="34"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="34" id="Qbi-fv-pSF"/>
@@ -478,7 +478,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Eg: 1000.99" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IYN-5P-Nvj">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Eg: 99.98" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IYN-5P-Nvj">
                                         <rect key="frame" x="57.666666666666686" y="420" width="240" height="34"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="240" id="6oo-Dq-VMX"/>
@@ -550,6 +550,7 @@
                                             <constraint firstAttribute="width" constant="117" id="oWw-S5-co4"/>
                                             <constraint firstAttribute="height" constant="49" id="uvg-fF-Od5"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <state key="normal" title="Add Product"/>
                                         <connections>
                                             <action selector="addProductOnClick:" destination="GLJ-16-I0l" eventType="touchUpInside" id="PqX-3i-k4l"/>
@@ -557,17 +558,23 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="WVZ-ws-QCR">
+                                <rect key="frame" x="169" y="387.66666666666669" width="37" height="37"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="lsY-az-KMY" firstAttribute="leading" secondItem="xwF-KK-jvt" secondAttribute="leading" constant="10" id="9eR-84-4cB"/>
+                            <constraint firstItem="WVZ-ws-QCR" firstAttribute="centerX" secondItem="vuc-Cz-Uz3" secondAttribute="centerX" id="Aak-tq-vrr"/>
                             <constraint firstItem="lsY-az-KMY" firstAttribute="top" secondItem="xwF-KK-jvt" secondAttribute="top" constant="15" id="PBj-6W-Y5G"/>
+                            <constraint firstItem="WVZ-ws-QCR" firstAttribute="centerY" secondItem="vuc-Cz-Uz3" secondAttribute="centerY" id="QFV-nw-9H4"/>
                             <constraint firstItem="xwF-KK-jvt" firstAttribute="bottom" secondItem="lsY-az-KMY" secondAttribute="bottom" constant="15" id="frg-Tf-mhf"/>
                             <constraint firstItem="xwF-KK-jvt" firstAttribute="trailing" secondItem="lsY-az-KMY" secondAttribute="trailing" constant="10" id="pht-2e-E3N"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="xwF-KK-jvt"/>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="WVZ-ws-QCR" id="Z2l-15-Eft"/>
                         <outlet property="colorwayTxt" destination="WyJ-qT-4Qn" id="Wyv-q2-oQo"/>
                         <outlet property="productBrandTxt" destination="rlW-jA-fif" id="wUJ-m9-Gft"/>
                         <outlet property="productImages" destination="0I4-WB-Wax" id="kn9-OL-NpR"/>
